// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateBar should match snapshot 1`] = `
<SlideYTransition
  transitionName="slide-vertically"
>
  <CSSTransitionGroup
    component={Symbol(react.fragment)}
    transitionAppear={true}
    transitionAppearTimeout={500}
    transitionEnter={false}
    transitionEnterTimeout={0}
    transitionLeave={true}
    transitionLeaveTimeout={500}
    transitionName="slide-vertically"
  >
    <Text>
      Updating!
    </Text>
  </CSSTransitionGroup>
</SlideYTransition>
`;

exports[`UpdateBar should match snapshot 2`] = `
<SlideYTransition
  transitionName="slide-vertically"
>
  <CSSTransitionGroup
    component={Symbol(react.fragment)}
    transitionAppear={true}
    transitionAppearTimeout={500}
    transitionEnter={false}
    transitionEnterTimeout={0}
    transitionLeave={true}
    transitionLeaveTimeout={500}
    transitionName="slide-vertically"
  />
</SlideYTransition>
`;
